fix: mobil project spacing

--- a/src/styles/_items.scss
+++ b/src/styles/_items.scss
@@ -5,12 +5,21 @@
   @include remove-first-and-last-vertical-margin;
   position: relative;
   margin-top: 5rem;
-  margin-bottom: 10rem;
+  margin-bottom: 5rem;
+
+  @media (min-width: $break-extra-small) {
+    margin-bottom: 10rem;
+  }
 
   &__header {
     position: relative;
-    height: 70vh;
     max-height: 500px;
+    height: calc(100vh / 3 );
+
+
+    @media (min-width: $break-extra-small) {
+      height: 70vh;
+    }
 
     &__images {
       position: relative;
@@ -38,7 +47,11 @@
 
   overflow: hidden;
   transition: max-height $opening-transition-timing ease-in-out;
-  max-height: 7.5em;
+  max-height: 10rem;
+
+  @media (min-width: $break-extra-small) {
+    max-height: 15rem;
+  }
 
   &.show-details {
     max-height: 50em;
@@ -75,11 +88,30 @@
 .v-cartel__description {
   @include column-container;
   @include remove-first-and-last-vertical-margin;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+
+  @media (min-width: $break-extra-small) {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
 }
 
 .v-cartel__description__texts {
-  @include column(8, 10);
   margin-bottom: 1rem;
+  @include column(12, 12);
+
+  @media (min-width: $break-small) {
+    @include column(21, 24);
+    @include column-skip(2, 24);
+  }
+
+  @media (min-width: $break-regular) {
+    @include column(11, 12);
+    @include column-skip(0, 12);
+  }
+
+  @media (min-width: $break-medium) {
+    @include column(10, 12);
+  }
 }
